<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Омское метро</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_station_info">Информация о станции</string>
    <string name="train_preview">Поезда</string>
    <string name="first_direction">Направление 1:</string>
    <string name="second_direction">Направление 2:</string>
    <string name="till_next_train">До прибытия поезда:</string>
    <string name="days_part_1">д</string>
    <string name="days_part_2">ень</string>
    <string name="days_part_3">ня</string>
    <string name="days_part_4">ней</string>
    <string name="hours_part_1">час</string>
    <string name="hours_part_2">а</string>
    <string name="hours_part_3">ов</string>
    <string name="obtain_in_the_next_year">Уточните через годик</string>
    <string name="station">Станция: </string>
    <string name="station_in_second_order">Строительство станции запланировано на вторую очередь</string>
    <string name="depot">Депо</string>
    <string name="position">Расположение:</string>
    <string name="ready_stations">Готовые станции</string>
    <string name="first_order"> Первая очередь</string>
    <string name="full_map">Полная карта</string>

</resources>