<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StationInfoActivity"
    android:background="@android:color/white" >

    <ImageView
        android:id="@+id/trainPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/suggestive_train"
        android:contentDescription="@string/train_preview" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station"
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />
        
        <TextView
            android:id="@+id/stationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="4dp" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/position_wrapper"
        android:visibility="gone" >

        <TextView
            android:id="@+id/positionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />
        
        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="4dp" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/stationInSecondOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_in_second_order"
        android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:layout_marginTop="30dp" />
    
    <TextView
        android:id="@+id/depot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/depot"
        android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/firstDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_direction"
        android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/firstDirectionStations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:layout_marginLeft="10dp" />

    <LinearLayout
        android:id="@+id/predictionArriving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/round_corners" >
    
        <TextView
            android:id="@+id/tillNextTrainLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/till_next_train"
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />
    
        <TextView
            android:id="@+id/tillNextTrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" 
            android:textColor="@color/remain_time"
            android:gravity="center"/>

        <TextView
            android:id="@+id/preciseInAYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obtain_in_the_next_year"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue" />
    
    </LinearLayout>
    
    <TextView
        android:id="@+id/secondDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_direction"
        android:textIsSelectable="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/secondDirectionStations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textIsSelectable="false"  />

</LinearLayout>